--- a/style.css
+++ b/style.css
@@ -11,3 +11,45 @@
       background-color: var(--cor-de-fundo);
       color: var(--branco);
       font-family: 'Chakra Petch'; sans-serif;
+}
+.conteudo-principal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    width: 100%;
+    margin: auto;
+}
+.titulo-principal {
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}
+
+.titulo-principal span {
+    color: var(--verde);
+}
+.botao {
+    font-family: "Crakra petch", sans-serif;
+    background-color: var(--botao-inativo);
+    color:  var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px
+    align-items: center;
+    width: 100%;
+}
+border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-rigth: 2px solid var(--botao-ativo);
+    border-top: none;
+.botoes {
+    display: block;
+}
+@media screen and (min-width: 768px) {
+    .botoes {
+        display: flex;
+}
+.botao
