--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@
     width: 100%;
     font-size: 32px;
 }
-
 .titulo-principal span {
     color: var(--verde);
 }
@@ -52,4 +51,17 @@ border-bottom: 4px solid var(--botao-ativo);
     .botoes {
         display: flex;
 }
-.botao
+.botao:first-child {
+    border-radius: 40px 40px 0 0;
+@media screen and (min width: 768px){
+    .botoes {
+        display: flex;
+}
+
+.botao: first-child {
+    border-radius: 40px 0 0 0;
+}
+.botao:last-child {
+    border-radius: 0 40px 0 0;
+ }
+}
